--- a/src/app/components/property-form/property-form.component.html
+++ b/src/app/components/property-form/property-form.component.html
@@ -146,7 +146,7 @@
     mat-flat-button
     color="primary"
     [disabled]="form.invalid"
-    (click)="onSubmit(form.value)">
+    (click)="onSubmit()">
     Add Property
   </button>
 </form>
