--- a/src/app/components/my-properties/my-properties.component.html
+++ b/src/app/components/my-properties/my-properties.component.html
@@ -1,29 +1,121 @@
 <div class="container my-5">
-    <h4>My Properties</h4>
-    <div class="mt-4">
-      <div class="alert alert-info" role="alert" *ngIf="!properties || properties.length === 0">
-        No properties added yet. Add a new property using the form below.
-      </div>
+  <h4>My Properties</h4>
+  <div class="mt-4">
+    <div
+      class="alert alert-info"
+      role="alert"
+      *ngIf="!properties || properties.length === 0">
+      No properties added yet. Add a new property from the "Add Property" menu.
     </div>
-  
-    <div class="row" *ngIf="properties && properties.length > 0">
-      <div
-        *ngFor="let property of properties"
-        class="col-xs-12 col-md-6 col-lg-4 mb-sm-2"
-      >
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">Property Information</h5>
-            <p class="card-text">
-              <strong>Address:</strong> {{ property.address }}
-            </p>
-            <p class="card-text">
-              <strong>Year of Construction:</strong
-              >{{ property.yearOfConstruction }}
-            </p>
-            <p><strong>Property Type:</strong> {{ property.propertyType }}</p>
-          </div>
+  </div>
+
+  <div *ngIf="properties && properties.length > 0">
+    <!-- <div
+      *ngFor="let property of properties"
+      class="col-xs-12 col-md-6 col-lg-4 mb-sm-2">
+      <div class="card h-100">
+        <div class="card-header">
+          <strong>{{ property.title }}</strong>
+        </div>
+        <div class="card-body">
+          <p>
+            {{ property.description }}
+          </p>
+          <p>
+            <strong>Area:</strong>
+            {{ property.area.name }}
+          </p>
+          <p>
+            <strong>Year of Construction:</strong>
+            {{ property.yearOfConstruction }}
+          </p>
+          <p>
+            <strong>Property Type:</strong>
+            {{ property.propertyType }}
+          </p>
         </div>
       </div>
-    </div>
+    </div> -->
+    <mat-grid-list
+      cols="3"
+      rowHeight="1:2">
+      <mat-grid-tile
+        *ngFor="let property of properties"
+        colspan="1"
+        rowspan="1">
+        <mat-card
+          class="property-card"
+          appearance="outlined">
+          <mat-card-header>
+            <mat-card-title>{{ property.title }}</mat-card-title>
+          </mat-card-header>
+          <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+          <mat-card-content>
+            @if (property.image && property.image.length > 0) {
+              <img
+                src="{{ property.image }}"
+                width="100%"
+                height="300" />
+            } @else {
+              <img
+                src="/no-image-placeholder.png"
+                width="100%"
+                height="300" />
+            }
+            <p>
+              {{ property.description }}
+            </p>
+            <p>
+              <strong>Area:</strong>
+              {{ property.area.name }}
+            </p>
+            <p>
+              <strong>Year of Construction:</strong>
+              {{ property.yearOfConstruction }}
+            </p>
+            <div class="property-info-row">
+              <span>
+                <strong>Floor:</strong>
+                {{ property.floor }}
+              </span>
+              <span>
+                <mat-icon
+                  aria-hidden="false"
+                  aria-label="Bedrooms"
+                  fontIcon="bed"></mat-icon>
+                &nbsp;
+                {{ property.bedrooms }}
+              </span>
+              <span>
+                <mat-icon
+                  aria-hidden="false"
+                  aria-label="Bathrooms"
+                  fontIcon="bathroom"></mat-icon>
+                &nbsp;
+                {{ property.bathrooms }}
+              </span>
+            </div>
+            <p>
+              <strong>Property Type:</strong>
+              {{ property.propertyType }}
+            </p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button
+              mat-button
+              color="warn"
+              routerLink="">
+              DELETE
+            </button>
+            <button
+              mat-button
+              color="primary"
+              routerLink="">
+              EDIT
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
 </div>
