--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,5 +26,91 @@
     </div>
   </nav> -->
 
-
-   <app-search-bar></app-search-bar>
+<app-property-filter
+  (filtersChanged)="onFiltersChanged($event)"></app-property-filter>
+@if (filteredProperties.length) {
+  <mat-grid-list
+    cols="3"
+    rowHeight="1:2">
+    <mat-grid-tile
+      *ngFor="let filteredProperty of filteredProperties"
+      colspan="1"
+      rowspan="1">
+      <mat-card
+        class="property-card"
+        appearance="outlined">
+        <mat-card-header>
+          <mat-card-title>{{ filteredProperty.title }}</mat-card-title>
+        </mat-card-header>
+        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+        <mat-card-content>
+          @if (filteredProperty.image && filteredProperty.image.length > 0) {
+            <img
+              src="{{ filteredProperty.image }}"
+              width="100%"
+              height="300" />
+          } @else {
+            <img
+              src="/no-image-placeholder.png"
+              width="100%"
+              height="300" />
+          }
+          <p>
+            {{ filteredProperty.description }}
+          </p>
+          <p>
+            <strong>Area:</strong>
+            {{ filteredProperty.area.name }}
+          </p>
+          <p>
+            <strong>Year of Construction:</strong>
+            {{ filteredProperty.yearOfConstruction }}
+          </p>
+          <div class="property-info-row">
+            <span>
+              <strong>Floor:</strong>
+              {{ filteredProperty.floor }}
+            </span>
+            <span>
+              <mat-icon
+                aria-hidden="false"
+                aria-label="Bedrooms"
+                fontIcon="bed"></mat-icon>
+              &nbsp;
+              {{ filteredProperty.bedrooms }}
+            </span>
+            <span>
+              <mat-icon
+                aria-hidden="false"
+                aria-label="Bathrooms"
+                fontIcon="bathroom"></mat-icon>
+              &nbsp;
+              {{ filteredProperty.bathrooms }}
+            </span>
+          </div>
+          <p>
+            <strong>Property Type:</strong>
+            {{ filteredProperty.propertyType }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button
+            mat-button
+            color="warn"
+            routerLink="">
+            DELETE
+          </button>
+          <button
+            mat-button
+            color="primary"
+            routerLink="">
+            EDIT
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+} @else {
+  No properties match your filters.
+}
+<!--<app-search-bar></app-search-bar> -->
