--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,79 +36,7 @@
       *ngFor="let filteredProperty of filteredProperties"
       colspan="1"
       rowspan="1">
-      <mat-card
-        class="property-card"
-        appearance="outlined">
-        <mat-card-header>
-          <mat-card-title>{{ filteredProperty.title }}</mat-card-title>
-        </mat-card-header>
-        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-        <mat-card-content>
-          @if (filteredProperty.image && filteredProperty.image.length > 0) {
-            <img
-              src="{{ filteredProperty.image }}"
-              width="100%"
-              height="300" />
-          } @else {
-            <img
-              src="/no-image-placeholder.png"
-              width="100%"
-              height="300" />
-          }
-          <p>
-            {{ filteredProperty.description }}
-          </p>
-          <p>
-            <strong>Area:</strong>
-            {{ filteredProperty.area.name }}
-          </p>
-          <p>
-            <strong>Year of Construction:</strong>
-            {{ filteredProperty.yearOfConstruction }}
-          </p>
-          <div class="property-info-row">
-            <span>
-              <mat-icon class="material-icons-outlined"
-                aria-hidden="false"
-                aria-label="Floor"
-                fontIcon="stairs"></mat-icon>
-              {{ filteredProperty.floor }}
-            </span>
-            <span>
-              <mat-icon
-                aria-hidden="false"
-                aria-label="Bedrooms"
-                fontIcon="bed"></mat-icon>
-              {{ filteredProperty.bedrooms }}
-            </span>
-            <span>
-              <mat-icon class="material-icons-outlined"
-                aria-hidden="false"
-                aria-label="Bathrooms"
-                fontIcon="shower"></mat-icon>
-              {{ filteredProperty.bathrooms }}
-            </span>
-          </div>
-          <p>
-            <strong>Property Type:</strong>
-            {{ filteredProperty.propertyType }}
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button
-            mat-button
-            color="warn"
-            routerLink="">
-            DELETE
-          </button>
-          <button
-            mat-button
-            color="primary"
-            routerLink="">
-            EDIT
-          </button>
-        </mat-card-actions>
-      </mat-card>
+      <app-property-card [property]="filteredProperty"></app-property-card>
     </mat-grid-tile>
   </mat-grid-list>
 } @else {
