--- a/src/app/components/my-properties/my-properties.component.html
+++ b/src/app/components/my-properties/my-properties.component.html
@@ -43,78 +43,7 @@
         *ngFor="let property of properties"
         colspan="1"
         rowspan="1">
-        <mat-card
-          class="property-card"
-          appearance="outlined">
-          <mat-card-header>
-            <mat-card-title>{{ property.title }}</mat-card-title>
-          </mat-card-header>
-          <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-          <mat-card-content>
-            @if (property.image && property.image.length > 0) {
-              <img
-                src="{{ property.image }}"
-                width="100%"
-                height="300" />
-            } @else {
-              <img
-                src="/no-image-placeholder.png"
-                width="100%"
-                height="300" />
-            }
-            <p>
-              {{ property.description }}
-            </p>
-            <p>
-              <strong>Area:</strong>
-              {{ property.area.name }}
-            </p>
-            <p>
-              <strong>Year of Construction:</strong>
-              {{ property.yearOfConstruction }}
-            </p>
-            <div class="property-info-row">
-              <span>
-                <strong>Floor:</strong>
-                {{ property.floor }}
-              </span>
-              <span>
-                <mat-icon
-                  aria-hidden="false"
-                  aria-label="Bedrooms"
-                  fontIcon="bed"></mat-icon>
-                &nbsp;
-                {{ property.bedrooms }}
-              </span>
-              <span>
-                <mat-icon
-                  aria-hidden="false"
-                  aria-label="Bathrooms"
-                  fontIcon="bathroom"></mat-icon>
-                &nbsp;
-                {{ property.bathrooms }}
-              </span>
-            </div>
-            <p>
-              <strong>Property Type:</strong>
-              {{ property.propertyType }}
-            </p>
-          </mat-card-content>
-          <mat-card-actions>
-            <button
-              mat-button
-              color="warn"
-              routerLink="">
-              DELETE
-            </button>
-            <button
-              mat-button
-              color="primary"
-              routerLink="">
-              EDIT
-            </button>
-          </mat-card-actions>
-        </mat-card>
+        <app-property-card [property]="property"></app-property-card>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
