--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,7 @@
-<mat-toolbar class="footer-toolbar" role="contentinfo">
+<footer id="footer">
+  <mat-toolbar
+    class="footer-toolbar"
+    role="contentinfo">
     <span>&copy; 2025 Home Finder Co. All rights reserved.</span>
   </mat-toolbar>
+</footer>
