--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <app-navbar></app-navbar>
-<div class="container">
+<div id="page-container">
+  <div
+    id="content-wrap"
+    class="container">
     <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
