add property-details initial component

--- a/src/app/components/property-card/property-card.component.css
+++ b/src/app/components/property-card/property-card.component.css
@@ -9,3 +9,19 @@
     gap: 30px;
     align-items: center;
 }
+
+.action-bar {
+    display: flex;
+    justify-content: start;
+    gap: 10px;
+}
+
+.delete-button {
+    background-color: #dc3545;
+    color: #fff!important; 
+}
+
+.edit-button {
+    background-color: #005cbb;
+    color: #fff!important; 
+}
