--- a/src/app/components/property-card/property-card.component.html
+++ b/src/app/components/property-card/property-card.component.html
@@ -72,18 +72,18 @@
       {{ getPropertyConditionLabel() }}
     </p>
   </mat-card-content>
-  @if (userOwned){
-    <mat-card-actions>
+  @if (userOwned) {
+    <mat-card-actions class="action-bar">
       <button
-        mat-button
-        color="warn"
+        class="delete-button"
+        mat-stroked-button
         routerLink="">
         DELETE
       </button>
       <button
-        mat-button
-        color="primary"
-        routerLink="">
+        class="edit-button"
+        mat-stroked-button
+        routerLink="/my-properties/{{property.id}}">
         EDIT
       </button>
     </mat-card-actions>
