--- a/src/app/components/property-card/property-card.component.html
+++ b/src/app/components/property-card/property-card.component.html
@@ -75,15 +75,16 @@
   @if (userOwned) {
     <mat-card-actions class="action-bar">
       <button
+        type="button"
+        (click)="openDialog('0ms', '0ms')"
         class="delete-button"
-        mat-stroked-button
-        routerLink="">
+        mat-stroked-button>
         DELETE
       </button>
       <button
         class="edit-button"
         mat-stroked-button
-        routerLink="/my-properties/{{property.id}}">
+        routerLink="/my-properties/{{ property.id }}">
         EDIT
       </button>
     </mat-card-actions>
