--- a/src/app/components/property-filter/property-filter.component.html
+++ b/src/app/components/property-filter/property-filter.component.html
@@ -1,6 +1,8 @@
-<mat-card class="filter-card">
-  <mat-card-title>Filter Properties</mat-card-title>
-  <mat-card-content>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>Filter Properties</mat-panel-title>
+    </mat-expansion-panel-header>
     <div class="filter-controls">
       <!-- Price Filter -->
       <mat-form-field>
@@ -21,7 +23,9 @@
       <!-- Property Condition -->
       <mat-form-field>
         <mat-label>Condition</mat-label>
-        <mat-select [(ngModel)]="filters.conditions" multiple>
+        <mat-select
+          [(ngModel)]="filters.conditions"
+          multiple>
           @for (condition of propertyConditions; track condition) {
             <mat-option [value]="condition.value">
               {{ condition.label }}
@@ -33,7 +37,9 @@
       <!-- Property Type -->
       <mat-form-field>
         <mat-label>Type</mat-label>
-        <mat-select [(ngModel)]="filters.propertyTypes" multiple>
+        <mat-select
+          [(ngModel)]="filters.propertyTypes"
+          multiple>
           @for (type of propertyTypes; track type) {
             <mat-option [value]="type.value">
               {{ type.label }}
@@ -45,7 +51,9 @@
       <!-- Property Type -->
       <mat-form-field>
         <mat-label>Area</mat-label>
-        <mat-select [(ngModel)]="filters.areas" multiple>
+        <mat-select
+          [(ngModel)]="filters.areas"
+          multiple>
           @for (area of areas; track area) {
             <mat-option [value]="area">
               {{ area.name }}
@@ -69,8 +77,6 @@
           [(ngModel)]="filters.maxSquareMeters" />
       </mat-form-field>
     </div>
-  </mat-card-content>
-  <mat-card-actions>
     <button
       mat-raised-button
       color="primary"
@@ -83,5 +89,5 @@
       (click)="resetFilters()">
       Reset
     </button>
-  </mat-card-actions>
-</mat-card>
+  </mat-expansion-panel>
+</mat-accordion>
