--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -31,6 +31,11 @@
 
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
           <li>
+            <a class="dropdown-item" role="button" (click)="updateUserProfile()">
+              Edit my Profile
+            </a>
+          </li>
+          <li>
             <a class="dropdown-item" role="button" (click)="logout()">
               Logout
             </a>
