--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,33 +1,14 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Home Finder</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-            @If ()"!isLoggedIn"
-          <li class="nav-item" >
-            <a class="nav-link" routerLink="/login">Σύνδεση</a>
-          </li>
-          <li class="nav-item" *ngIf="isLoggedIn">
-            <a class="nav-link" (click)="logout()">Αποσύνδεση</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
-
 <app-property-filter
   (filtersChanged)="onFiltersChanged($event)"></app-property-filter>
+<div class="sorting-container">
+  <mat-form-field appearance="outline">
+    <mat-label>Sort by</mat-label>
+    <mat-select [(ngModel)]="sortOrder" (selectionChange)="onSortChange($event.value)">
+      <mat-option value="desc">Newest</mat-option>
+      <mat-option value="asc">Oldest</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 @if (filteredProperties.length) {
   <mat-grid-list
     cols="3"
@@ -42,4 +23,3 @@
 } @else {
   No properties match your filters.
 }
-<!--<app-search-bar></app-search-bar> -->
