--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
+    margin-top: 1rem;
   }
   
   .sorting-container label {
