--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,16 +10,12 @@
   </mat-form-field>
 </div>
 @if (filteredProperties.length) {
-  <mat-grid-list
-    cols="3"
-    rowHeight="1:2">
-    <mat-grid-tile
+  <div class="row">
+    <app-property-card
+      class="col-lg-4 col-md-6 col-xs-12"
       *ngFor="let filteredProperty of filteredProperties"
-      colspan="1"
-      rowspan="1">
-      <app-property-card [property]="filteredProperty"></app-property-card>
-    </mat-grid-tile>
-  </mat-grid-list>
+      [property]="filteredProperty"></app-property-card>
+  </div>
 } @else {
   No properties match your filters.
 }
