--- a/src/app/components/property-card/property-card.component.html
+++ b/src/app/components/property-card/property-card.component.html
@@ -2,7 +2,7 @@
   class="property-card"
   appearance="outlined">
   <mat-card-header>
-    <mat-card-title>{{ property.title }}</mat-card-title>
+    <mat-card-title class="mb-1">{{ property.title }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     @if (property.image && property.image.length > 0) {
@@ -16,9 +16,9 @@
         width="100%"
         height="300" />
     }
-    <p>
+    <p class="mt-3">
       <strong>
-        {{ getPropertyTypeLabel() }}, {{ property.squareMeters }} m² , {{getPropertyUseLabel()}}
+        {{ getPropertyTypeLabel() }}, {{ property.squareMeters }} m², {{getPropertyUseLabel()}}
       </strong>
     </p>
     <p>
@@ -37,8 +37,8 @@
       <strong>Year of Construction:</strong>
       {{ property.yearOfConstruction }}
     </p>
-    <div class="property-info-row">
-      <span>
+    <div class="d-flex gap-5 mb-3">
+      <span class="d-inline-flex gap-2">
         <mat-icon
           class="material-icons-outlined"
           aria-hidden="false"
@@ -46,14 +46,14 @@
           fontIcon="stairs"></mat-icon>
         {{ property.floor }}
       </span>
-      <span>
+      <span class="d-inline-flex  gap-2">
         <mat-icon
           aria-hidden="false"
           aria-label="Bedrooms"
           fontIcon="bed"></mat-icon>
         {{ property.bedrooms }}
       </span>
-      <span>
+      <span class="d-inline-flex gap-2">
         <mat-icon
           class="material-icons-outlined"
           aria-hidden="false"
@@ -71,7 +71,7 @@
       <strong>Condition:</strong>
       {{ getPropertyConditionLabel() }}
     </p>
-    <span>
+    <span class="d-inline-flex gap-2">
       <mat-icon
       class="material-icons-outlined"
           aria-hidden="false"
