--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,13 +1,28 @@
+.drawer-container {
+  position: relative; /* Ensures it stays within the container */
+  height: 100%;
+  background-color: transparent;
+}
 
-.sorting-container {
-    display: flex;
-    align-items: center;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
-  
-  .sorting-container label {
-    margin-right: 0.5rem;
-    font-weight: bold;
-  }
-  
+mat-drawer {
+  width: 300px;
+  padding: 16px;
+  z-index: 10;
+  border: 1px solid #c4c4cd;
+  box-shadow: var(--mat-elevation-z4);
+  position: fixed; /* Fixes the drawer on the left side */
+  top: 0;
+  bottom: 0;
+}
+
+.main-content {
+  padding: 16px;
+  margin-left: 0; /* Default, no margin */
+  transition: margin 0.3s ease-in-out;
+  max-width: 100%; /* Ensures it doesn't exceed container width */
+}
+
+.mat-drawer-opened + .main-content {
+  margin-left: 300px; /* Push content when drawer is open */
+}
+
