--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,54 +1,45 @@
-<h4>Login Form</h4>
-
-@if (registrationStatus.message === "Not attempted yet") {
-    <form
-      [formGroup]="form"
-      class="d-flex flex-column">
-      <mat-form-field>
-        <mat-label>Username</mat-label>
-        <input
-          matInput
-          type="text"
-          formControlName="userName" />
-        @if (form.get("userName").invalid && form.get("userName").touched) {
-          <mat-error>Username is required</mat-error>
-        }
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Password</mat-label>
-        <input
-          matInput
-          type="password"
-          formControlName="password" />
-        @if (form.get("password").invalid && form.get("password").touched) {
-          <mat-error>Password is missing or invalid</mat-error>
-        }
-      </mat-form-field>
-      <button
-        mat-flat-button
-        color="primary"
-        [disabled]="form.invalid"
-        (click)="onSubmit(form.value)">
-        Login
-      </button>
-    </form>
-  } @else {
-    @if (registrationStatus.success) {
-      <div class="alert alert-success mt-2 w-50">
-        <strong>Success:</strong>
-        {{ registrationStatus.message }}
-      </div>
-    } @else {
-      <div class="alert alert-danger mt-2 w-50">
-        <strong>Error:</strong>
-        {{ registrationStatus.message }}
-      </div>
-    }
-    <button
-      mat-flat-button
-      color="primary"
-      class="mt-2"
-      (click)="registerAnotherUser()">
-      Register Another User
-    </button>
-  }
+<div class="login-container">
+  <mat-card class="login-card">
+    <mat-card-header>
+      <mat-card-title class="mb-3">Login</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form
+        [formGroup]="form"
+        class="d-flex flex-column">
+        <mat-form-field>
+          <mat-label>Username</mat-label>
+          <input
+            matInput
+            type="text"
+            formControlName="userName" />
+          @if (form.get("userName").invalid && form.get("userName").touched) {
+            <mat-error>Username is required</mat-error>
+          }
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            type="password"
+            formControlName="password" />
+          @if (form.get("password").invalid && form.get("password").touched) {
+            <mat-error>Password is missing or invalid</mat-error>
+          }
+        </mat-form-field>
+        <button
+          mat-flat-button
+          color="primary"
+          [disabled]="form.invalid"
+          (click)="onSubmit(form.value)">
+          Login
+        </button>
+        <span class="mt-3">
+          Don't have an account? Click
+          <a [routerLink]="['/signup']">here</a>
+          to sign up
+        </span>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
